[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookchain"
version = "0.0.1"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Double-entry accounting system with cryptographic audit trail and optional cryptographic transaction verification."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Database :: Front-Ends",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "sqloquent >= 0.4.3",
  "tapescript >= 0.6.1",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/bookchain"
"Bug Tracker" = "https://github.com/k98kurz/bookchain/issues"

[project.scripts]
bookchain = "bookchain.tools:run_cli"

[project.optional-dependencies]
asyncql = [
  "sqloquent[asyncql] >= 0.4.3",
]
docs = [
  "autodox >= 0.1.16"
]